<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="36dp"
    android:paddingVertical="16dp"
    tools:context=".ui.tambah_transaksi.TambahTransaksiFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_receiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_masuk_ke"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@android:color/primary_text_light"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/edt_layout_receiver" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_dari"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@android:color/primary_text_light"
        app:layout_constraintTop_toBottomOf="@id/edt_layout_receiver">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_sender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/edt_layout_sender" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_jumlah"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@android:color/primary_text_light"
        app:layout_constraintTop_toBottomOf="@id/edt_layout_sender"
        app:prefixText="Rp ">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/edt_layout_value" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_keterangan"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@android:color/primary_text_light"
        app:layout_constraintTop_toBottomOf="@id/edt_layout_value">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/edt_layout_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_transaction_type"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_jenis"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:endIconDrawable="@drawable/ic_down"
        app:endIconMode="custom"
        app:hintTextColor="@android:color/primary_text_light"
        app:layout_constraintEnd_toStartOf="@+id/tv_more"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_layout_description">

        <AutoCompleteTextView
            android:id="@+id/edt_transaction_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="none"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_more"
        android:textColor="@color/primary_green"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edt_layout_transaction_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_layout_transaction_type" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerThickness="1dp"
        app:layout_constraintBottom_toBottomOf="@id/edt_layout_transaction_type"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/tv_transaction_proof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_image_proof"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_transaction_proof"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/light_gray"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transaction_proof">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_transaction_proof"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />


            <TextView
                android:id="@+id/tv_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_image"
                android:textColor="@color/primary_green"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_image_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/cv_transaction_proof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_transaction_proof"
        app:layout_constraintTop_toTopOf="@id/cv_transaction_proof"
        tools:visibility="visible">

        <TextView
            android:id="@+id/btn_change_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_change_image"
            android:textColor="@color/primary_green"
            android:textSize="16sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp" />

        <TextView
            android:id="@+id/btn_delete_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>