<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/bg_card"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tv_transaction_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/tv_transaction_date"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Dari Bos ke Kasir Perangkat 1" />


            <TextView
                android:id="@+id/tv_transaction_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/tv_transaction_title"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="13:00" />

            <TextView
                android:id="@+id/tv_transaction_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/tv_transaction_value"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_transaction_title"
                tools:text="Tambahan Modal" />

            <TextView
                android:id="@+id/tv_transaction_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_transaction_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/tv_transaction_type"
                app:layout_constraintTop_toTopOf="@id/tv_transaction_type"
                tools:text="Rp 100.000" />

            <LinearLayout
                android:id="@+id/layout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@id/btn_view_photo"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_transaction_type">

                <Button
                    android:id="@+id/btn_edit"
                    style="@style/Widget.Material3.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_edit"
                    android:textColor="@color/btn_edit"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:backgroundTint="@android:color/transparent"
                    app:icon="@drawable/ic_edit"
                    app:iconTint="@color/btn_edit" />

                <Button
                    android:id="@+id/btn_delete"
                    style="@style/Widget.Material3.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_delete"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:backgroundTint="@android:color/transparent"
                    app:icon="@drawable/ic_delete"
                    app:iconTint="@android:color/holo_red_light" />

            </LinearLayout>

            <TextView
                android:id="@+id/btn_view_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_view_image"
                android:textColor="@color/btn_edit"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/layout_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layout_btn"
                app:layout_constraintTop_toTopOf="@id/layout_btn"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>